<?xml version="1.0"?>
<package format="2">
  <name>mh5_anomaly_detector</name>
  <version>0.1.6</version>
  <description>ROS Anomaly Detector for Motoman MH5 robot arm</description>

  <maintainer email="narayave@oregonstate.edu">Vedanth Narayanan</maintainer>

  <license>BSD</license>
  <url type="website">http://wiki.ros.org/mh5_anomaly_detector</url>
  <url type="repository">https://github.com/narayave/mh5_anomaly_detector</url>
  <author email="narayave@oregonstate.edu">Vedanth Narayanan</author>
  <buildtool_depend>catkin</buildtool_depend>

</package>
